RESOLVED FIXED180424
[Win] UIScriptController::zoomToScale not implemented
https://bugs.webkit.org/show_bug.cgi?id=180424
Summary [Win] UIScriptController::zoomToScale not implemented
Ali Juma
Reported 2017-12-05 07:40:19 PST
+++ This bug was initially created as a clone of Bug #168050 +++ Tests using it fail: fast/visual-viewport/rtl-zoomed-rects.html fast/visual-viewport/viewport-dimensions-exclude-custom-scrollbars.html fast/visual-viewport/viewport-dimensions-exclude-scrollbars.html fast/visual-viewport/viewport-dimensions-under-page-zoom.html fast/visual-viewport/viewport-dimensions.html fast/visual-viewport/zoomed-fixed-header-and-footer.html fast/visual-viewport/zoomed-fixed-scroll-down-then-up.html fast/visual-viewport/zoomed-fixed.html fast/visual-viewport/zoomed-rects.html fast/zooming/client-rect-in-fixed-zoomed.html fast/zooming/uiscript-zooming.html
Attachments
Patch (18.38 KB, patch)
2019-11-07 00:21 PST, Fujii Hironori
no flags
Archive of layout-test-results from ews210 for win-future (14.46 MB, application/zip)
2019-11-08 09:32 PST, EWS Watchlist
no flags
Patch for landing (18.61 KB, patch)
2019-11-11 17:34 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2019-11-07 00:21:04 PST
EWS Watchlist
Comment 2 2019-11-08 09:32:36 PST
Comment on attachment 383026 [details] Patch Attachment 383026 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/13226855 New failing tests: fast/visual-viewport/client-coordinates-relative-to-layout-viewport.html
EWS Watchlist
Comment 3 2019-11-08 09:32:39 PST
Created attachment 383133 [details] Archive of layout-test-results from ews210 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews210 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Alex Christensen
Comment 4 2019-11-08 13:39:10 PST
Comment on attachment 383026 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383026&action=review > Tools/DumpRenderTree/win/UIScriptControllerWin.cpp:69 > + // FIXME: No API to get the page scale factor I think at this point we probably don't want to fix this. > Tools/WebKitTestRunner/win/UIScriptControllerWin.cpp:44 > + callOnMainThread([this, protectedThis = makeRef(*this), callbackID ] { I don't see why this is necessary. Can't we just complete the task immediately? We're never on a non-main thread, right?
Fujii Hironori
Comment 5 2019-11-11 17:16:49 PST
Comment on attachment 383026 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383026&action=review >> Tools/DumpRenderTree/win/UIScriptControllerWin.cpp:69 >> + // FIXME: No API to get the page scale factor > > I think at this point we probably don't want to fix this. Will remove "FIXME:". >> Tools/WebKitTestRunner/win/UIScriptControllerWin.cpp:44 >> + callOnMainThread([this, protectedThis = makeRef(*this), callbackID ] { > > I don't see why this is necessary. Can't we just complete the task immediately? We're never on a non-main thread, right? Yes, it's on the main thread, however, it should be run on the next run loop iteration.
Fujii Hironori
Comment 6 2019-11-11 17:34:29 PST
Created attachment 383326 [details] Patch for landing
Fujii Hironori
Comment 7 2019-11-12 00:28:14 PST
Radar WebKit Bug Importer
Comment 8 2019-11-12 00:29:22 PST
Note You need to log in before you can comment on or make changes to this bug.