[Win] UIScriptController::zoomToScale not implemented https://bugs.webkit.org/show_bug.cgi?id=180424

Reviewed by Alex Christensen.

Tools:

* DumpRenderTree/PlatformWin.cmake:
* DumpRenderTree/win/UIScriptControllerWin.cpp: Added.
(WTR::UIScriptController::create):
(WTR::UIScriptControllerWin::doAsyncTask):
(WTR::UIScriptControllerWin::zoomToScale):
(WTR::UIScriptControllerWin::zoomScale const):
* DumpRenderTree/win/UIScriptControllerWin.h: Added.
(WTR::UIScriptControllerWin::UIScriptControllerWin):
* TestRunnerShared/UIScriptContext/UIScriptController.cpp:
* WebKitTestRunner/PlatformWin.cmake:
* WebKitTestRunner/win/UIScriptControllerWin.cpp: Added.
(WTR::UIScriptController::create):
(WTR::UIScriptControllerWin::doAsyncTask):
(WTR::UIScriptControllerWin::zoomToScale):
(WTR::UIScriptControllerWin::zoomScale const):
* WebKitTestRunner/win/UIScriptControllerWin.h: Added.
(WTR::UIScriptControllerWin::UIScriptControllerWin):

LayoutTests:

* platform/win/TestExpectations:
* platform/wincairo/TestExpectations:
Unmarked skipped tests for webkit.org/b/180424.
Marked fast/visual-viewport/client-coordinates-relative-to-layout-viewport.html,
fast/visual-viewport/client-rects-relative-to-layout-viewport.html
and fast/visual-viewport/zoomed-fixed-scroll-down-then-up.html as
Failure.

Canonical link: https://commits.webkit.org/217412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252357 268f45cc-cd09-0410-ab3c-d52691b4dbfc